--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,14 +23,15 @@
       $("#roles :input").change(function() {
         if(this.name === 'Auftraggeber') {
           $("#leftNavBar").append( $( "<a id='newPost' class='btn btn-primary' href='{%  url 'post-create' %}'>Neuer Auftrag</a>" ) );
-          
-          console.log('Auftraggeber');
+          $("#mainContainer").hide();
         } else if (this.name === 'Auftragnehmer'){
           $("#newPost").remove();
+          $("#mainContainer").show();
         }
       });
     });
   </script>
+
 </head>
 
 <body>
@@ -47,7 +48,7 @@
             <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
             <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             {% if user.is_authenticated %}
-            <a id='newPost' class='btn btn-primary' href='{%  url 'post-create' %}'>Neuer Auftrag</a>
+            <a id='newPost' class='btn btn-primary' href='{%  url "post-create" %}'>Neuer Auftrag</a>
             {% endif %}
           </div>
           <!-- Navbar Right Side -->
