--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,9 +1,14 @@
 {% extends "blog/base.html" %}
 {% block content%}
-
+<style>
+img {
+    max-width: 100%;
+    height: auto;
+}
+</style>
 <div id="mainContainer" >
+  <h2>Jobs</h2>
   {% for post in posts %}
-  {% if user != post.author %}
   <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
     <div class="media-body">
@@ -15,11 +20,22 @@
       <p class="article-content">{{ post.content }}</p>
       <pclass="article-content">Weight: {{ post.weight }}<p/>
       <pclass="article-content">Price: {{ post.price }}<p/>
-      <a class='btn btn-primary' href='{%  url "blog-home" %}'>Bewerben</a>
+      {% if post.image %}
+      <img src="{{ post.image.url }}" width="460" height="345">
+      {% endif %}
+      <br>
+      <br>
+      {% if user.is_authenticated %}
+        {% if post.author != user %}
+          <a class='btn btn-primary' href='{%  url "blog-home" %}'>Apply</a>
+        {% endif %}
+      {% endif %}
+      {% if post.author == user %}
+        <a class="btn btn-success" href="{% url 'post-update' post.id %}">Update</a>
+        <a class="btn btn-danger" href="{% url 'post-delete' post.id %}">Delete</a>
+      {% endif %}
     </div>
   </article>
-  {% endif %}
   {% endfor %}
 </div>
-
 {% endblock content %}
