--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,8 +21,8 @@ img {
       </div>
       <h2 class="article-title">{{ object.title }}</h2>
       <p class="article-content">{{ object.content }}</p>
-      <pclass="article-content">Weight: {{ object.weight }}<p/>
-      <pclass="article-content">Price: {{ object.price }}<p/>
+      <pclass="article-content">Weight: {{ object.weight }} kg<p/>
+      <pclass="article-content">Price: {{ object.price }} EURO<p/>
       <div class="portrait">
         <img src="{{ post.image.url }}" width="460" height="345">
       </div>
