Fixed bug which caused to not render all applications in the sidebar

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -39,7 +39,7 @@
       </ul>
     </nav>
     <br>
-  {% for post in posts %}
+  {% for post in subPosts %}
   <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
     <div class="media-body">
